--- a/templates/basic_template.html
+++ b/templates/basic_template.html
@@ -3,8 +3,29 @@
 <head>
 	<meta charset="utf-8">
 	<title>{{title}}</title>
+	<script src="/static/jquery2.js"></script>
+	<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css" />
+	<script src="/static/bootstrap/js/bootstrap.min.js"></script>
+	<style type="text/css">
+	body {
+		font-family: 'Apple SD Gothic Neo', '맑은 고딕', sans-serif;
+	}
+	</style>
 </head>
 <body>
+	<nav class="tab-bar">
+      <section class="left-small">
+        <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
+      </section>
+
+      <section class="middle tab-bar-section">
+        <h1 class="title">Foundation</h1>
+      </section>
+
+      <section class="right-small">
+        <a class="right-off-canvas-toggle menu-icon" href="#"><span></span></a>
+      </section>
+    </nav>
 	{{content}}
 </body>
 </html>
