--- a/templates/basic_template.html
+++ b/templates/basic_template.html
@@ -21,7 +21,7 @@
 	</style>
 </head>
 <body>
-<!--[if lte IE 8]><script>alert({{lang.noie8}});</script><![endif]-->
+<!--[if lte IE 8]><script>alert({{lang['noie8']}});</script><![endif]-->
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="container">
 		<div class="navbar-header">
