--- a/templates/basic_template.html
+++ b/templates/basic_template.html
@@ -33,15 +33,13 @@
 			</button>
 			<a class="navbar-brand" href="/">KOISTUDYS2</a>
 		</div>
-		<div id="navbar" class="navbar-collapse collapse">
+		<div id="navbar" class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				{%for menu in menus%}
+				<li><a href="/{{menu.url}}">{{menu.name}}</a></li>
+				{%endfor%}
+			</ul>
 		</div>
-	</div>
-	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		<ul class="nav navbar-nav">
-			{%for menu in menus%}
-			<li><a href="{{menu.url}}">{{menu.name}}</a></li>
-			{%endfor%}
-		</ul>
 	</div>
 </nav>
 <div class="container">
