--- a/templates/basic_template.html
+++ b/templates/basic_template.html
@@ -59,6 +59,9 @@
 {%if mode == 'signup'%}
 {%include 'signup.html'%}
 {%endif%}
+{%if mode == 'signup_err_captcha'%}
+{%include 'signup_err.html'%}
+{%endif%}
 <hr>
 <footer>
 <p>&copy; 2015</p>
