--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,7 @@
 <form action="/signup/submit" method="POST">
 	<div class="row">
+	</div>
+	<div class="row">
 		<div class="col-md-4"><label>{{lang['username']}}</label></div>
 		<div class="col-md-8"><input type="text" class="form-control" name="username" placeholder="{{lang['username']}}"></div>
 	</div>
