--- a/templates/basic_template.html
+++ b/templates/basic_template.html
@@ -45,7 +45,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				{%if session.username is defined%}
-				<strong>session.username</strong>
+				<strong>{{session.username}}</strong>
 				{%else%}
 				<a href="/signin" class="btn btn-info navbar-btn">{{lang['signin']}}</a>
 				<a href="/signup" class="btn btn-success navbar-btn">{{lang['signup']}}</a>
