--- a/templates/basic_template.html
+++ b/templates/basic_template.html
@@ -64,7 +64,7 @@
 {%endif%}
 <hr>
 <footer>
-<p>&copy; 2015</p>
+<p>&copy; HLETRD, HYEA, Kenny Park, koosaga, Namnamseo 2015</p>
 </footer>
 </div>
 </body>
