--- a/templates/signup_err.html
+++ b/templates/signup_err.html
@@ -1,3 +1,3 @@
 {{lang[mode]}}
 <br /><br />
-<a href="#" onclick="history.go(-1)" class="btn btn-primary">{{lang['back']}}</a>
+<button onclick="history.go(-1);" class="btn btn-primary">{{lang['back']}}</button>
