--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,17 @@
-<form action="/login/submit" method="POST">
-	<div class="row">
-		<div class="col-md-4"><label>{{lang['username']}}</label></div>
-		<div class="col-md-8"><input type="text" class="form-control" name="username" placeholder="{{lang['username']}}"></div>
-	</div>
-	<br />
-	<div class="row">
-		<div class="col-md-4"><label>{{lang['password']}}</label></div>
-		<div class="col-md-8"><input type="password" class="form-control" name="password" placeholder="{{lang['password']}}"></div>
-	</div>
-	<br />
-	<div class="row">
-		<div class="col-md-2 col-md-offset-10"><input type="submit" class="btn btn-primary btn-block" value="{{lang['signup_submit']}}"></div>
-	</div>
-</form>
+<div class="row">
+	<form action="/login/submit" method="POST" class="col-md-4 col-md-offset-4">
+		<div class="row">
+			<div class="col-md-4"><label>{{lang['username']}}</label></div>
+			<div class="col-md-8"><input type="text" class="form-control" name="username" placeholder="{{lang['username']}}"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-md-4"><label>{{lang['password']}}</label></div>
+			<div class="col-md-8"><input type="password" class="form-control" name="password" placeholder="{{lang['password']}}"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-md-4 col-md-offset-8"><input type="submit" class="btn btn-primary btn-block" value="{{lang['signup_submit']}}"></div>
+		</div>
+	</form>
+</div>
