--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,41 +1,43 @@
-<form action="/signup/submit" method="POST">
-	<div class="row">
-	</div>
-	<div class="row">
-		<div class="col-md-4"><label>{{lang['username']}}</label></div>
-		<div class="col-md-8"><input type="text" class="form-control" name="username" placeholder="{{lang['username']}}"></div>
-	</div>
-	<br />
-	<div class="row">
-		<div class="col-md-4"><label>{{lang['password']}}</label></div>
-		<div class="col-md-8"><input type="password" class="form-control" name="password" placeholder="{{lang['password']}}"></div>
-	</div>
-	<br />
-	<div class="row">
-		<div class="col-md-4"><label>{{lang['password_re']}}</label></div>
-		<div class="col-md-8"><input type="password" class="form-control" name="password_re" placeholder="{{lang['password_re']}}"></div>
-	</div>
-	<br />
-	<div class="row">
-		<div class="col-md-4"><label>{{lang['name']}}</label></div>
-		<div class="col-md-8"><input type="text" class="form-control" name="name" placeholder="{{lang['name']}}"></div>
-	</div>
-	<br />
-	<div class="row">
-		<div class="col-md-4"><label>{{lang['nickname']}}</label></div>
-		<div class="col-md-8"><input type="text" class="form-control" name="nickname" placeholder="{{lang['nickname']}}"></div>
-	</div>
-	<br />
-	<div class="row">
-		<div class="col-md-4"><label>{{lang['email']}}</label></div>
-		<div class="col-md-8"><input type="email" class="form-control" name="email" placeholder="{{lang['email']}}"></div>
-	</div>
-	<br />
-	<div class="row">
-		<div class="g-recaptcha col-md-4 col-md-offset-8" data-sitekey="6LfC4AcTAAAAAJ275Ys1Yxs7aAwJ_KloaVzgxE1V"></div>
-	</div>
-	<br />
-	<div class="row">
-		<div class="col-md-2 col-md-offset-10"><input type="submit" class="btn btn-primary btn-block" value="{{lang['signup_submit']}}"></div>
-	</div>
-</form>
+<div class="row">
+	<form action="/signup/submit" method="POST" class="col-md-offset-3 col-md-6">
+		<div class="row">
+		</div>
+		<div class="row">
+			<div class="col-md-4"><label>{{lang['username']}}</label></div>
+			<div class="col-md-8"><input type="text" class="form-control" name="username" placeholder="{{lang['username']}}"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-md-4"><label>{{lang['password']}}</label></div>
+			<div class="col-md-8"><input type="password" class="form-control" name="password" placeholder="{{lang['password']}}"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-md-4"><label>{{lang['password_re']}}</label></div>
+			<div class="col-md-8"><input type="password" class="form-control" name="password_re" placeholder="{{lang['password_re']}}"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-md-4"><label>{{lang['name']}}</label></div>
+			<div class="col-md-8"><input type="text" class="form-control" name="name" placeholder="{{lang['name']}}"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-md-4"><label>{{lang['nickname']}}</label></div>
+			<div class="col-md-8"><input type="text" class="form-control" name="nickname" placeholder="{{lang['nickname']}}"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-md-4"><label>{{lang['email']}}</label></div>
+			<div class="col-md-8"><input type="email" class="form-control" name="email" placeholder="{{lang['email']}}"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="g-recaptcha col-md-4 col-md-offset-4" data-sitekey="6LfC4AcTAAAAAJ275Ys1Yxs7aAwJ_KloaVzgxE1V"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-md-6 col-md-offset-6"><input type="submit" class="btn btn-primary btn-block" value="{{lang['signup_submit']}}"></div>
+		</div>
+	</form>
+</div>
