로그인페이지에 회원가입 버튼 -> 로그

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 		</div>
 		<br />
 		<div class="row">
-			<div class="col-md-4 col-md-offset-8"><input type="submit" class="btn btn-primary btn-block" value="{{lang['signup_submit']}}"></div>
+			<div class="col-md-4 col-md-offset-8"><input type="submit" class="btn btn-primary btn-block" value="{{lang['signin']}}"></div>
 		</div>
 	</form>
 </div>
