--- a/templates/stats.html
+++ b/templates/stats.html
@@ -1,17 +1,4 @@
-<div class="row">
-	<form action="/login/submit" method="POST" class="col-md-4 col-md-offset-4">
-		<div class="row">
-			<div class="col-md-4"><label>{{lang['username']}}</label></div>
-			<div class="col-md-8"><input type="text" class="form-control" name="username" placeholder="{{lang['username']}}"></div>
-		</div>
-		<br />
-		<div class="row">
-			<div class="col-md-4"><label>{{lang['password']}}</label></div>
-			<div class="col-md-8"><input type="password" class="form-control" name="password" placeholder="{{lang['password']}}"></div>
-		</div>
-		<br />
-		<div class="row">
-			<div class="col-md-4 col-md-offset-8"><input type="submit" class="btn btn-primary btn-block" value="{{lang['signin']}}"></div>
-		</div>
-	</form>
-</div>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<title>404 Not Found</title>
+<h1>Not Found</h1>
+<p>The requested URL was not found on the server.  If you entered the URL manually please check your spelling and try again.</p>
