--- a/templates/probs.html
+++ b/templates/probs.html
@@ -1,17 +1,39 @@
 <div class="row">
-	<form action="/login/submit" method="POST" class="col-md-4 col-md-offset-4">
-		<div class="row">
-			<div class="col-md-4"><label>{{lang['username']}}</label></div>
-			<div class="col-md-8"><input type="text" class="form-control" name="username" placeholder="{{lang['username']}}"></div>
-		</div>
-		<br />
-		<div class="row">
-			<div class="col-md-4"><label>{{lang['password']}}</label></div>
-			<div class="col-md-8"><input type="password" class="form-control" name="password" placeholder="{{lang['password']}}"></div>
-		</div>
-		<br />
-		<div class="row">
-			<div class="col-md-4 col-md-offset-8"><input type="submit" class="btn btn-primary btn-block" value="{{lang['signin']}}"></div>
-		</div>
+	<form action="/login/submit" method="POST" class="col-md-4">
+		<div class="container">
+	 	<table class="table table-bordered">
+			<thead>
+				<tr>
+					<th>Number</th>
+					<th>Best Verdict</th>
+					<th>Name</th>
+					<th>Source</th>
+					<th>Solved</th>
+					<th>Tried</th>
+					<th>Diff</th>
+			    </tr>
+				</thead>
+			    <tbody>
+			      <tr>
+			        <td>1</td>
+			        <td>AC</td>
+			        <td>Hello World</td>
+			        <td></td>
+			        <td>1</td>
+			        <td>1</td>
+			        <td>1</td>
+			      </tr>
+			      <tr>
+			        <td>2</td>
+			        <td>WA</td>
+			        <td>Goodbye Cruel World</td>
+			        <td>Hell</td>
+			        <td>0</td>
+			        <td>666</td>
+			        <td>9</td>
+			      </tr>
+			    </tbody>
+  		</table>
+  		</div>
 	</form>
 </div>
