--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,3 +1,4 @@
+{%include '_header.html'%}
 <div class="row">
 	<form action="/signup/submit" method="POST" class="col-md-offset-3 col-md-6">
 		<div class="row">
@@ -41,3 +42,4 @@
 		</div>
 	</form>
 </div>
+{%include '_footer.html'%}
