--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+{%include '_header.html'%}
 <div class="row">
 	<form action="/login/submit" method="POST" class="col-md-4 col-md-offset-4">
 		<div class="row">
@@ -15,3 +16,4 @@
 		</div>
 	</form>
 </div>
+{%include '_footer.html'%}
