--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,5 @@
 {%include '_header.html'%}
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <div class="row">
 	<form action="/signup/submit" method="POST" class="col-md-offset-3 col-md-6">
 		<div class="row">
