--- a/templates/user.html
+++ b/templates/user.html
@@ -1,5 +1,7 @@
+{%include '_header.html'%}
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
 		<a href="/info" class="btn btn-primary">{{lang['changeinfo']}}</a>
 	</div>
 </div>
+{%include '_footer.html'%}
