--- a/templates/user.html
+++ b/templates/user.html
@@ -1,6 +1,10 @@
 {%include '_header.html'%}
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
+		<div class="jumbotron">
+			<h1>{{data['username']}}</h1>
+			<p>{{data['name']}}</p>
+		</div>
 		<a href="/info" class="btn btn-primary">{{lang['changeinfo']}}</a>
 	</div>
 </div>
