회원정보 수정 페이지

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -41,7 +41,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				{%if session.username is defined%}
-				<li><a href="/user"><strong>{{session.username}}</strong></a></li>
+				<li><a href="/user"><strong>{{session.nickname}}</strong></a></li>
 				<li><a href="/logout">{{lang['logout']}}</a></li>
 				{%else%}
 				<a href="/login" class="btn btn-info navbar-btn">{{lang['signin']}}</a>
