--- a/templates/user.html
+++ b/templates/user.html
@@ -2,10 +2,10 @@
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
 		<div class="jumbotron">
-			<h1>{{data['username']}}</h1>
+			<h1>{{data['nickname']}}</h1>
 			<p>{{data['name']}}</p>
 		</div>
-		<a href="/info" class="btn btn-primary">{{lang['changeinfo']}}</a>
+		<a href="/changeuser" class="btn btn-primary">{{lang['changeinfo']}}</a>
 	</div>
 </div>
 {%include '_footer.html'%}
