--- a/templates/changeuser.html
+++ b/templates/changeuser.html
@@ -32,7 +32,7 @@
 		</div>
 		<br />
 		<div class="row">
-			<div class="col-md-6 col-md-offset-6"><input type="submit" class="btn btn-primary btn-block" value="{{lang['signup_submit']}}"></div>
+			<div class="col-md-6 col-md-offset-6"><input type="submit" class="btn btn-primary btn-block" value="{{lang['changeinfo_submit']}}"></div>
 		</div>
 	</form>
 </div>
