--- a/templates/_basic.html
+++ b/templates/_basic.html
@@ -1,3 +1,5 @@
 {%include '_header.html'%}
-{{content}}
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">{{content}}</div>
+</div>
 {%include '_footer.html'%}
