회원정보 수정

--- a/templates/changeuser.html
+++ b/templates/changeuser.html
@@ -3,17 +3,17 @@
 	<form action="/changeuser/submit" method="POST" class="col-md-offset-3 col-md-6">
 		<div class="row">
 			<div class="col-md-4"><label>{{lang['password_now']}}</label></div>
-			<div class="col-md-8"><input type="password" class="form-control" name="password" placeholder="{{lang['type_pw_now']}}"></div>
+			<div class="col-md-8"><input type="password" class="form-control" name="password_now" placeholder="{{lang['type_pw_now']}}"></div>
 		</div>
 		<br />
 		<div class="row">
 			<div class="col-md-4"><label>{{lang['password_new']}}</label></div>
-			<div class="col-md-8"><input type="password" class="form-control" name="password" placeholder="{{lang['left_blank']}}"></div>
+			<div class="col-md-8"><input type="password" class="form-control" name="password_new" placeholder="{{lang['left_blank']}}"></div>
 		</div>
 		<br />
 		<div class="row">
 			<div class="col-md-4"><label>{{lang['password_new_re']}}</label></div>
-			<div class="col-md-8"><input type="password" class="form-control" name="password_re" placeholder="{{lang['left_blank']}}"></div>
+			<div class="col-md-8"><input type="password" class="form-control" name="password_new_re" placeholder="{{lang['left_blank']}}"></div>
 		</div>
 		<br />
 		<div class="row">
