--- a/templates/viewprob.html
+++ b/templates/viewprob.html
@@ -73,12 +73,7 @@
 	</div>
 	<div class="tab-pane active" id="submit">
 		{%if session['username']%}
-		<div id="editor" style="width: 100%; height: 500px;">
-		function foo(items) {
-    var x = "All this is syntax highlighted";
-    return x;
-}
-		</div>
+		<div id="editor" style="width: 100%; height: 500px;"></div>
 		<script src="/static/ace/ace.js"></script>
 		<script>
 			var editor = ace.edit("editor");
