--- a/templates/login_err.html
+++ b/templates/login_err.html
@@ -1,7 +1,11 @@
 {%include '_header.html'%}
 <div class="row">
-<div class="col-md-4 col-md-offset-4">
+<div class="col-md-6 col-md-offset-3">
 {{lang[mode]}}
+{%if mode=='login_err_email'%}
+<br /><br />
+<a href="/confirm/resend" class="btn btn-warning btn-block">{{lang['signup_email_resend']}}</a>
+{%endif%}
 <br /><br />
 <button onclick="history.go(-1);" class="btn btn-primary">{{lang['back']}}</button>
 </div>
