--- a/templates/changeuser.html
+++ b/templates/changeuser.html
@@ -25,11 +25,11 @@
 			<div class="col-md-4"><label>{{lang['nickname']}}</label></div>
 			<div class="col-md-8"><input type="text" class="form-control" name="nickname" placeholder="{{lang['nickname']}}" value="{{data['nickname']}}"></div>
 		</div>
-		<br />
+		<!--<br />
 		<div class="row">
 			<div class="col-md-4"><label>{{lang['email']}}</label></div>
 			<div class="col-md-8"><input type="email" class="form-control" name="email" placeholder="{{lang['email']}}" value="{{data['email']}}"></div>
-		</div>
+		</div>-->
 		<br />
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6"><input type="submit" class="btn btn-primary btn-block" value="{{lang['changeinfo_submit']}}"></div>
