--- a/templates/viewprob.html
+++ b/templates/viewprob.html
@@ -71,7 +71,7 @@
 			</tbody>
 		</table>
 	</div>
-	<div class="tab-pane active" id="submit">
+	<div class="tab-pane" id="submit">
 		{%if session['username']%}
 		<div id="editor" style="width: 100%; height: 500px;"></div>
 		<script src="/static/ace/ace.js"></script>
