Fixed view on mobile

--- a/templates/viewprob.html
+++ b/templates/viewprob.html
@@ -58,14 +58,30 @@
 				</tr>
 				<tr>
 					<td>
-						<div class="col-md-6 row h2"> {{lang['viewprob_exin']}} </div>
-						<div class="col-md-6 row h2"> {{lang['viewprob_exout']}} </div>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<div class="col-md-6 row"> {{data.desc.exin}} </div>
-						<div class="col-md-6 row"> {{data.desc.exout}} </div>
+						<table class="col-md-6">
+							<tr>
+								<td>
+									<div class="col-md-6 row h2"> {{lang['viewprob_exin']}} </div>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<div class="col-md-6 row"> {{data.desc.exin}} </div>
+								</td>
+							</tr>
+						</table>
+						<table class="col-md-6">
+							<tr>
+								<td>
+									<div class="col-md-6 row h2"> {{lang['viewprob_exout']}} </div>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<div class="col-md-6 row"> {{data.desc.exout}} </div>
+								</td>
+							</tr>
+						</table>
 					</td>
 				</tr>
 			</tbody>
