Update problem viewing
1) remove number from probs, add submits
2) view source and difficulty

--- a/templates/viewprob.html
+++ b/templates/viewprob.html
@@ -19,6 +19,14 @@
 				<tr class="active">
 					<td>
 						<div class="row">
+							<div class="col-md-2 h4"><strong> {{lang['viewprob_by']}} </strong></div>
+							<div class="col-md-2 h4"> {{data.prob.by}} </div>
+						</div>
+						<div class="row">
+							<div class="col-md-2 h4"><strong> {{lang['viewprob_diff']}} </strong></div>
+							<div class="col-md-2 h4"> {{data.prob.diff}} </div>
+						</div>
+						<div class="row">
 							<div class="col-md-2 h4"><strong> {{lang['viewprob_unique']}} </strong></div>
 							<div class="col-md-2 h4"> {{data.prob.unique_id}} </div>
 						</div>
