readme change + addprob visibility

--- a/templates/addprob.html
+++ b/templates/addprob.html
@@ -2,8 +2,8 @@
 <div class="row">
 	<form action="/addprob/submit" method="POST" class="col-md-offset-1 col-md-10">
 		<div class="row">
-			<div class="col-md-3"><label>{{lang['addprob_num']}}</label></div>
-			<div class="col-md-9"><input type="text" class="form-control" name="num" placeholder="{{lang['addprob_num']}}"></div>
+			<div class="col-md-3"><label>{{lang['addprob_title']}}</label></div>
+			<div class="col-md-9"><input type="text" class="form-control" name="title" placeholder="{{lang['addprob_title']}}"></div>
 		</div>
 		<br />
 		<div class="row">
@@ -17,8 +17,13 @@
 		</div>
 		<br />
 		<div class="row">
-			<div class="col-md-3"><label>{{lang['addprob_title']}}</label></div>
-			<div class="col-md-9"><input type="text" class="form-control" name="title" placeholder="{{lang['addprob_title']}}"></div>
+			<div class="col-md-3"><label>{{lang['addprob_visib']}}</label></div>
+			<div class="col-md-9"><input type="text" class="form-control" name="by" placeholder="{{lang['addprob_visib']}}"></div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-md-3"><label>{{lang['addprob_gshs']}}</label></div>
+			<div class="col-md-9"><input type="text" class="form-control" name="by" placeholder="{{lang['addprob_gshs']}}"></div>
 		</div>
 		<br />
 		<div class="row">
