--- a/templates/viewprob.html
+++ b/templates/viewprob.html
@@ -101,12 +101,54 @@
 	</div>
 	<div class="tab-pane" id="submit">
 		{%if session['username']%}
+		Select theme: <select id="sel_theme" onchange="settheme()">
+			<option value="ambiance">ambiance</option>
+			<option value="chaos">chaos</option>
+			<option value="chrome">chrome</option>
+			<option value="clouds">clouds</option>
+			<option value="clouds_midnight">clouds_midnight</option>
+			<option value="cobalt">cobalt</option>
+			<option value="crimson_editor">crimson_editor</option>
+			<option value="dawn">dawn</option>
+			<option value="dreamweaver">dreamweaver</option>
+			<option value="eclipse">eclipse</option>
+			<option value="github">github</option>
+			<option value="idle_fingers">idle_fingers</option>
+			<option value="iplastic">iplastic</option>
+			<option value="katzenmilch">katzenmilch</option>
+			<option value="kr_theme">kr_theme</option>
+			<option value="kuroir">kuroir</option>
+			<option value="merbivore">merbivore</option>
+			<option value="merbivore_soft">merbivore_soft</option>
+			<option value="mono_industrial">mono_industrial</option>
+			<option value="monokai">monokai</option>
+			<option value="pastel_on_dark">pastel_on_dark</option>
+			<option value="solarized_dark">solarized_dark</option>
+			<option value="solarized_light">solarized_light</option>
+			<option value="sqlserver">sqlserver</option>
+			<option value="terminal">terminal</option>
+			<option value="textmate">textmate</option>
+			<option value="tomorrow">tomorrow</option>
+			<option value="tomorrow_night">tomorrow_night</option>
+			<option value="tomorrow_night_blue">tomorrow_night_blue</option>
+			<option value="tomorrow_night_bright">tomorrow_night_bright</option>
+			<option value="tomorrow_night_eighties">tomorrow_night_eighties</option>
+			<option value="twilight">twilight</option>
+			<option value="vibrant_ink">vibrant_ink</option>
+			<option value="xcode">xcode</option>
+		</select>
 		<div id="editor" style="width: 100%; height: 500px;"></div>
 		<script src="/static/ace/ace.js"></script>
 		<script>
+			"use strict";
 			var editor = ace.edit("editor");
-			editor.setTheme("ace/theme/chrome");
+			editor.setTheme("ace/theme/{{data.theme}}");
+			$('#sel_theme').val('{{data.theme}}')
 			editor.getSession().setMode("ace/mode/c_cpp");
+			var settheme = function() {
+				editor.setTheme('ace/theme/' + $('#sel_theme').val());
+				$.get('/settheme/' + $('#sel_theme').val());
+			};
 		</script>
 		{%else%}
 		<h2>{{lang['viewprob_pleaselogin']}}</h2>
