OS X 10.11 Font support

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -15,7 +15,7 @@
 
 	<style type="text/css">
 	body {
-		font-family: 'Apple SD Gothic Neo', '맑은 고딕', sans-serif !important;
+		font-family: 'San Francisco', 'Helvetica', 'Apple SD Gothic Neo', '맑은 고딕', sans-serif !important;
 		padding-top: 70px;
 	}
 	</style>
