checkbox on addprob

--- a/templates/addprob.html
+++ b/templates/addprob.html
@@ -18,12 +18,12 @@
 		<br />
 		<div class="row">
 			<div class="col-md-3"><label>{{lang['addprob_visib']}}</label></div>
-			<div class="col-md-9"><input type="text" class="form-control" name="by" placeholder="{{lang['addprob_visib']}}"></div>
+			<div class="col-md-9"><input type="checkbox" name="visib"></div>
 		</div>
 		<br />
 		<div class="row">
 			<div class="col-md-3"><label>{{lang['addprob_gshs']}}</label></div>
-			<div class="col-md-9"><input type="text" class="form-control" name="by" placeholder="{{lang['addprob_gshs']}}"></div>
+			<div class="col-md-9"><input type="checkbox" name="gshs"></div>
 		</div>
 		<br />
 		<div class="row">
