--- a/templates/viewprob.html
+++ b/templates/viewprob.html
@@ -155,7 +155,7 @@
 		</script>
 		<br />
 		<div class="row">
-			<form method="POST" action="/viewprob/{{data.prob.unique_id}}/submit" class="col-md-3 col-md-offset-9">
+			<form method="POST" action="/submit/{{data.prob.unique_id}}" class="col-md-3 col-md-offset-9">
 				<input id="code" type="hidden" name="code">
 				<input type="submit" value="{{lang['viewprob_submit_btn']}}" class="btn btn-primary btn-block">
 			</form>
