--- a/templates/probs.html
+++ b/templates/probs.html
@@ -36,27 +36,27 @@
 				<ul class="pagination">
 				{%if data.pagenow > 3%}
 				<li>
-					<a href="#">
+					<a href="/probs/{{data.pagel0}}">
 					<span>&laquo;</span>
 					</a>
 				</li>
 				{%endif%}
 				{%if data.pagenow > 2%}
-				<li><a href="#">{{data.pagel1}}</a></li>
+				<li><a href="/probs/{{data.pagel1}}">{{data.pagel1}}</a></li>
 				{%endif%}
 				{%if data.pagenow > 1%}
-				<li><a href="#">{{data.pagel2}}</a></li>
+				<li><a href="/probs/{{data.pagel2}}">{{data.pagel2}}</a></li>
 				{%endif%}
-				<li><a href="#">{{data.pagenow}}</a></li>
+				<li><a href="/probs/{{data.pagenow}}">{{data.pagenow}}</a></li>
 				{%if data.pager1 != 0%}
-				<li><a href="#">{{data.pager1}}</a></li>
+				<li><a href="/probs/{{data.pager1}}">{{data.pager1}}</a></li>
 				{%endif%}
 				{%if data.pager2 != 0%}
-				<li><a href="#">{{data.pager2}}</a></li>
+				<li><a href="/probs/{{data.pager2}}">{{data.pager2}}</a></li>
 				{%endif%}
 				{%if data.pager3 != 0%}
 				<li>
-					<a href="#">
+					<a href="/probs/{{data.pager3}}">
 					<span>&raquo;</span>
 					</a>
 				</li>
