View prob에서 example이 출력되지 않던 문제 수정

--- a/templates/viewprob.html
+++ b/templates/viewprob.html
@@ -78,7 +78,7 @@
 							</tr>
 							<tr>
 								<td>
-									<div class="col-md-6 row"> {{data.prob.input_ex}} </div>
+									<div class="col-md-6 row"> {{data.prob.exin}} </div>
 								</td>
 							</tr>
 						</table>
@@ -90,7 +90,7 @@
 							</tr>
 							<tr>
 								<td>
-									<div class="col-md-6 row"> {{data.prob.output_ex}} </div>
+									<div class="col-md-6 row"> {{data.prob.exout}} </div>
 								</td>
 							</tr>
 						</table>
