responsive table & urandom support if OS does not support HRNG

--- a/templates/probs.html
+++ b/templates/probs.html
@@ -5,7 +5,7 @@
 		<a href="/addprob" class="btn btn-primary">{{lang['addprob']}}</a>
 		<br /><br />
 		{%endif%}
-		<table class="table table-striped">
+		<table class="table table-striped table-responsive">
 			<thead>
 				<tr>
 					{%for key,name in data.key_list%}
