--- a/templates/addprob.html
+++ b/templates/addprob.html
@@ -17,6 +17,11 @@
 		</div>
 		<br />
 		<div class="row">
+			<div class="col-md-3"><label>{{lang['addprob_diff']}}</label></div>
+			<div class="col-md-9"><input type="text" class="form-control" name="diff" placeholder="{{lang['addprob_diff']}}"></div>
+		</div>
+		<br />
+		<div class="row">
 			<div class="col-md-3"><label>{{lang['addprob_visib']}}</label></div>
 			<div class="col-md-9"><input type="checkbox" name="visib"></div>
 		</div>
