--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -2,7 +2,7 @@
 <footer>
 	<div class="row">
 		<div class="col-md-8">
-			<p style="display: inline;">&copy; HLETRD, HYEA, Kenny Park, koosaga, Namnamseo 2015</p>
+			<p style="display: inline;">&copy; HLETRD, HYEA, koosaga, Namnamseo 2015</p>
 		</div>
 		<div class="col-md-4">
 			<script>
