--- a/templates/probs.html
+++ b/templates/probs.html
@@ -34,7 +34,7 @@
 					{%endfor%}
 					{%if data['is_admin']%}
 					<td>
-						<a href="/modifyprob/{{eachprob['unique_id']}}" class="btn btn-primary">{{lang['probs_modify']}}</a>
+						<a href="/editprob/{{eachprob['unique_id']}}" class="btn btn-primary">{{lang['probs_edit']}}</a>
 					</td>
 					{%endif%}
 				</tr>
