투덜투덜투덜
Too long commit; ddin't read

--- a/templates/probs.html
+++ b/templates/probs.html
@@ -19,7 +19,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				{%for eachprob in data.submit_list%}
+				{%for eachprob in data.prob_list%}
 				<tr>
 					{%for key,name in data.key_list%}
 					<td>
