--- a/templates/editprob.html
+++ b/templates/editprob.html
@@ -23,7 +23,7 @@
 		<br />
 		<div class="row">
 			<div class="col-md-3"><label>{{lang['addprob_visib']}}</label></div>
-			<div class="col-md-9"><input type="checkbox" name="visib" {%if data.visib==True%} checked {%endif%}></div>
+			<div class="col-md-9"><input type="checkbox" name="visib" {%if data.visib==False%} checked {%endif%}></div>
 		</div>
 		<br />
 		<div class="row">
