--- a/templates/probs.html
+++ b/templates/probs.html
@@ -27,7 +27,7 @@
 							<a href="/viewprob/{{eachprob['unique_id']}}">
 						{%endif%}
 						{{eachprob[key]}}
-						{%if key == 'name'%}
+						{%if key == 'display_name'%}
 							</a>
 						{%endif%}
 					</td>
