--- a/templates/addprob.html
+++ b/templates/addprob.html
@@ -22,8 +22,8 @@
 		</div>
 		<br />
 		<div class="row">
-			<div class="col-md-3"><label>{{lang['addprob_visib']}}</label></div>
-			<div class="col-md-9"><input type="checkbox" name="visib"></div>
+			<div class="col-md-3"><label>{{lang['addprob_adminonly']}}</label></div>
+			<div class="col-md-9"><input type="checkbox" name="adminonly"></div>
 		</div>
 		<br />
 		<div class="row">
