Fixed error in 'Add contest'

--- a/templates/addcontest.html
+++ b/templates/addcontest.html
@@ -2,8 +2,8 @@
 <div class="row">
 	<form action="/addcontest/submit" method="POST" class="col-md-offset-1 col-md-10">
 		<div class="row">
-			<div class="col-md-3"><label>{{lang['addcontest_title']}}</label></div>
-			<div class="col-md-9"><input type="text" class="form-control" name="title" placeholder="{{lang['addcontest_title']}}"></div>
+			<div class="col-md-3"><label>{{lang['addcontest_display_name']}}</label></div>
+			<div class="col-md-9"><input type="text" class="form-control" name="display_name" placeholder="{{lang['addcontest_display_name']}}"></div>
 		</div>
 		<br />
 		<div class="row">
