태블릿PC에서 언어 선택이 다음 줄로 넘어가는 문제 수정

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,10 +1,10 @@
 <hr>
 <footer>
 	<div class="row">
-		<div class="col-md-8">
+		<div class="col-sm-8">
 			<p style="display: inline;">&copy; HLETRD, HYEA, koosaga, Namnamseo, seungwonpark 2015</p>
 		</div>
-		<div class="col-md-4">
+		<div class="col-sm-4">
 			<script>
 			"use strict";
 			var changelang = function(lang){
