--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,7 @@
 		<div class="row">
 			<div class="col-md-4 col-md-offset-8"><input type="submit" class="btn btn-primary btn-block" value="{{lang['signin']}}"></div>
 		</div>
+			<a href="/findacc">{{lang['findacc']}}</a>
 	</form>
 </div>
 {%include '_footer.html'%}
